# xmemory

./: .env.example  .gitignore  .python-version  README.md  package-lock.json  package.json  pyproject.toml  run_memory_processor.sh  stop_memory_processor.sh
app/: main.py
app/api/: auth.py
app/api/v1/endpoints/: memories.py
app/core/: config.py  middleware.py
app/db/elasticsearch/: client.py  memory_repository.py  models.py  repository.py
app/llm/: agno_memory.py  embeddings.py  insight_memory_agent.py  memory_agent.py  memory_processor_worker.py  project_memory_agent.py  report_memory_agent.py
app/storage/: file_storage.py
app/utils/: session_manager.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: CreateMemory.tsx  MemoryList.tsx  ProtectedRoute.tsx  SearchMemory.tsx
frontend/src/components/common/: AppHeader.tsx
frontend/src/components/projects/: ProjectDetail.tsx  ProjectList.tsx  TaskList.tsx
frontend/src/pages/: Home.tsx  Login.tsx  Memories.tsx  Projects.tsx  Search.tsx
frontend/src/services/: apiService.ts  authService.ts  memoryService.ts
frontend/src/styles/: index.css
frontend/src/utils/: memoryTypes.ts  userStorage.ts
tests/: test_embedding.py  test_main.py
tests/db/elasticsearch/: test_memory_repository.py
tests/smoke/: test_memory_repository.py
