[project]
name = "xmemory"
version = "0.1.0"
description = "A modern Python project with FastAPI backend"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi",
    "elasticsearch[async]>=7.10.0,<8.0.0",
    "python-dotenv",
    "uvicorn",
    "numpy",
    "pytest",
    "pytest-asyncio",
    "pydantic-settings",
    "openai"
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v" 